--- a/src/main/resources/env/minecraft_server/docker-compose.yml
+++ b/src/main/resources/env/minecraft_server/docker-compose.yml
@@ -1,25 +1,27 @@
-version: "3.8"
+version: "3.7"
 
 services:
   mc:
-    image: itzg/minecraft-server
+    image: itzg/minecraft-server:java11
     ports:
       - 25565:25565
       - 7091:7091
       - 8123:8123
     environment:
       EULA: "TRUE"
-      TYPE: "PAPER"
-      SPIGET_RESOURCES: "274,28140,2124"
+      TYPE: "MOHIST"
+      #SPIGET_RESOURCES: "274,28140,2124"
       TZ: "Europe/London"
       ENABLE_JMX: "true"
       JMX_HOST: "localhost"
       USE_AIKAR_FLAGS: "true"
       COPY_CONFIG_DEST: "/data"
       PLUGINS_SYNC_UPDATE: "false"
+      #FORGEVERSION: "36.1.25"
     volumes:
-      - E:\work\storage\minecraft:/data
-      - E:\work\storage\minecraft\shared\configs:/config
-      - E:\work\storage\minecraft\shared\plugins:/plugins
+      - ./server:/data
+      - ./shared/configs:/config
+      - ./shared/plugins:/plugins
+      - ./shared/mods:/mods
     stdin_open: true
     tty: true
