--- a/src/main/resources/env/minecraft_server/docker-compose.yml
+++ b/src/main/resources/env/minecraft_server/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - 8123:8123
     environment:
       EULA: "TRUE"
-      TYPE: "MOHIST"
+      TYPE: "FORGE"
       #SPIGET_RESOURCES: "274,28140,2124"
       TZ: "Europe/London"
       ENABLE_JMX: "true"
@@ -18,6 +18,7 @@ services:
       COPY_CONFIG_DEST: "/data"
       PLUGINS_SYNC_UPDATE: "false"
       #FORGEVERSION: "36.1.25"
+      FORCE_REDOWNLOAD: "true"
     volumes:
       - ./server:/data
       - ./shared/configs:/config
