--- a/src/main/resources/env/minecraft_server/docker-compose.yml
+++ b/src/main/resources/env/minecraft_server/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   mc:
-    image: itzg/minecraft-server:java11
+    image: itzg/minecraft-server:java8
     ports:
       - 25565:25565
       - 7091:7091
@@ -19,6 +19,7 @@ services:
       PLUGINS_SYNC_UPDATE: "false"
       #FORGEVERSION: "36.1.25"
       FORCE_REDOWNLOAD: "true"
+      VERSION: "1.16.5"
     volumes:
       - ./server:/data
       - ./shared/configs:/config
